include compilersource dir for os_switchboard

--- a/CommandLine/libAssets/CMakeLists.txt
+++ b/CommandLine/libAssets/CMakeLists.txt
@@ -31,7 +31,7 @@ foreach(CompilerFlag ${CompilerFlags})
   message(STATUS "  '${CompilerFlag}': ${${CompilerFlag}}")
 endforeach()
 
-include_directories(. "${ENIGMA_DIR}/CommandLine/protos/" "${ENIGMA_DIR}/shared/lodepng" "${ENIGMA_DIR}/shared/bettersystem")
+include_directories(. "${ENIGMA_DIR}/CommandLine/protos/" "${ENIGMA_DIR}/shared/lodepng" "${ENIGMA_DIR}/shared/bettersystem" "${ENIGMA_DIR}/CompilerSource")
 link_directories(${ENIGMA_DIR})
 target_link_libraries(${LIB} PRIVATE Protocols)
 
