add compiler option za for logic keywords like and/or

--- a/CommandLine/libAssets/CMakeLists.txt
+++ b/CommandLine/libAssets/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_DEBUG_POSTFIX d)
 
 project(${LIB} VERSION ${LIB_VERSION} DESCRIPTION ${LIB_DESCRIPTION})
 
+target_compile_options(${LIB} PRIVATE "/Za")
+
 file(GLOB SRC_FILES *.cpp)
 get_filename_component(ENIGMA_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
 get_filename_component(ENIGMA_DIR "${ENIGMA_DIR}" PATH)
