--- a/CommandLine/libAssets/CMakeLists.txt
+++ b/CommandLine/libAssets/CMakeLists.txt
@@ -11,10 +11,14 @@ project(${LIB} VERSION ${LIB_VERSION} DESCRIPTION ${LIB_DESCRIPTION})
 file(GLOB SRC_FILES *.cpp)
 get_filename_component(ENIGMA_DIR "${CMAKE_CURRENT_SOURCE_DIR}" PATH)
 get_filename_component(ENIGMA_DIR "${ENIGMA_DIR}" PATH)
-add_library(${LIB} STATIC ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp" "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
+
 if(MSVC)
+  add_library(${LIB} STATIC ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp" "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
   target_compile_options(${LIB} PRIVATE "/Za")
+else()
+  add_library(${LIB} SHARED ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp" "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
 endif(MSVC)
+
 set_property(TARGET ${LIB} PROPERTY CXX_STANDARD 17)
 set_property(TARGET ${LIB} PROPERTY CXX_STANDARD_REQUIRED ON)
 
@@ -30,13 +34,16 @@ set(CompilerFlags
 	  CMAKE_CXX_FLAGS_RELWITHDEBINFO
         )
 foreach(CompilerFlag ${CompilerFlags})
-  string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+  if(MSVC)
+    string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
+  endif(MSVC)
   message(STATUS "  '${CompilerFlag}': ${${CompilerFlag}}")
 endforeach()
 
 include_directories(. "${ENIGMA_DIR}/CommandLine/protos/" "${ENIGMA_DIR}/shared/lodepng" "${ENIGMA_DIR}/shared/bettersystem" "${ENIGMA_DIR}/CompilerSource")
 
 include(FindProtobuf)
+include_directories(${Protobuf_INCLUDE_DIRS})
 target_link_libraries(${LIB} PRIVATE ${Protobuf_LIBRARY})
 
 link_directories(${ENIGMA_DIR})
