try /permissive- instead of /Za

--- a/CommandLine/libAssets/CMakeLists.txt
+++ b/CommandLine/libAssets/CMakeLists.txt
@@ -14,7 +14,7 @@ get_filename_component(ENIGMA_DIR "${ENIGMA_DIR}" PATH)
 
 if(MSVC)
   add_library(${LIB} STATIC ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp" "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
-  target_compile_options(${LIB} PRIVATE "/Za")
+  target_compile_options(${LIB} PRIVATE "/permissive-")
 else()
   add_library(${LIB} SHARED ${SRC_FILES} "${ENIGMA_DIR}/shared/lodepng/lodepng.cpp" "${ENIGMA_DIR}/shared/bettersystem/bettersystem.cpp")
 endif(MSVC)
