--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,17 @@
 cmake_minimum_required(VERSION 3.11)
 
+# MUST be done before call to 'project'
+get_cmake_property(vars CACHE_VARIABLES)
+foreach(var ${vars})
+  get_property(currentHelpString CACHE "${var}" PROPERTY HELPSTRING)
+    if("${currentHelpString}" MATCHES "No help, variable specified on the command line." OR "${currentHelpString}" STREQUAL "")
+        # message("${var} = [${${var}}]  --  ${currentHelpString}") # uncomment to see the variables being processed
+        list(APPEND CL_ARGS "-D${var}=${${var}}")
+    endif()
+endforeach()
+
+project(SuperBuild)
+
 include(ExternalProject)
 
 ExternalProject_Add(
@@ -7,6 +19,7 @@ ExternalProject_Add(
   DOWNLOAD_COMMAND ""
   SOURCE_DIR "${CMAKE_SOURCE_DIR}/CommandLine/protos"
   BINARY_DIR "${CMAKE_SOURCE_DIR}/build/libProtocols"
+  CMAKE_ARGS ${CL_ARGS}
 )
 
 ExternalProject_Add(
@@ -15,6 +28,7 @@ ExternalProject_Add(
   DOWNLOAD_COMMAND ""
   SOURCE_DIR "${CMAKE_SOURCE_DIR}/CommandLine/libEGM"
   BINARY_DIR "${CMAKE_SOURCE_DIR}/build/libEGM"
+  CMAKE_ARGS ${CL_ARGS}
 )
 
 ExternalProject_Add(
@@ -23,6 +37,7 @@ ExternalProject_Add(
   DOWNLOAD_COMMAND ""
   SOURCE_DIR "${CMAKE_SOURCE_DIR}/CommandLine/emake"
   BINARY_DIR "${CMAKE_SOURCE_DIR}/build/emake"
+  CMAKE_ARGS ${CL_ARGS}
 )
 
 ExternalProject_Add(
@@ -30,4 +45,5 @@ ExternalProject_Add(
   DOWNLOAD_COMMAND ""
   SOURCE_DIR "${CMAKE_SOURCE_DIR}/CompilerSource"
   BINARY_DIR "${CMAKE_SOURCE_DIR}/build/compiler"
+  CMAKE_ARGS ${CL_ARGS}
 )
