--- a/CommandLine/emake/CMakeLists.txt
+++ b/CommandLine/emake/CMakeLists.txt
@@ -41,6 +41,10 @@ include_directories(${LIB} PRIVATE
                     "${ENIGMA_DIR}/CommandLine/protos/codegen"
 )
 
+if(MSVC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /permissive-")
+endif(MSVC)
+
 message(STATUS "Initial build flags:")
 set(CompilerFlags
     CMAKE_C_FLAGS_DEBUG
@@ -72,18 +76,12 @@ find_package(yaml-cpp CONFIG REQUIRED)
 target_link_libraries(${EXE} PRIVATE yaml-cpp)
 
 # Find libEGM
-# Debug
-find_library(LIB_EGM_D NAMES EGMd PATHS ${ENIGMA_DIR})
-# Release
 find_library(LIB_EGM NAMES EGM PATHS ${ENIGMA_DIR})
-target_link_libraries(${EXE} PRIVATE "$<IF:$<CONFIG:Debug>,${LIB_EGM_D},${LIB_EGM}>")
+target_link_libraries(${EXE} PRIVATE ${LIB_EGM})
 
 # Find libProtocols
-# Debug
-find_library(LIB_PROTO_D NAMES Protocolsd PATHS ${ENIGMA_DIR})
-# Release
 find_library(LIB_PROTO NAMES Protocols PATHS ${ENIGMA_DIR})
-target_link_libraries(${EXE} PRIVATE "$<IF:$<CONFIG:Debug>,${LIB_PROTO_D},${LIB_PROTO}>")
+target_link_libraries(${EXE} PRIVATE ${LIB_PROTO})
 
 # Find GRPC
 find_library(LIB_GRPC_UNSECURE NAMES grpc++_unsecure)
@@ -105,15 +103,21 @@ find_package(ZLIB REQUIRED)
 include_directories(${ZLIB_INCLUDE_DIRS})
 target_link_libraries(${EXE} PRIVATE ${ZLIB_LIBRARIES})
 
-# libdl
-target_link_libraries(${EXE} PRIVATE dl)
+if(NOT MSVC)
+  # libdl
+  target_link_libraries(${EXE} PRIVATE dl)
+endif(NOT MSVC)
 
 # Find Boost
 if(MSVC)
   set(Boost_USE_STATIC_LIBS ON) # only find static libs
+  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE")
+  target_link_libraries(${EXE} PRIVATE Ws2_32 Wldap32 Crypt32 Winmm Userenv Netapi32 version Dwmapi Imm32)
 endif(MSVC)
 
 find_package(Boost COMPONENTS system program_options filesystem REQUIRED)
 target_link_libraries(${EXE} PRIVATE Boost::program_options Boost::filesystem)
 
-install(TARGETS ${LIB} DESTINATION "${ENIGMA_DIR}")
+install(TARGETS ${EXE} DESTINATION "${ENIGMA_DIR}")
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${EXE}.dir/Debug/${EXE}.pdb" DESTINATION "${ENIGMA_DIR}" OPTIONAL)
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${EXE}.dir/Debug/${EXE}.ilk" DESTINATION "${ENIGMA_DIR}" OPTIONAL)
