--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_install:
         sudo apt-get -y install libsfml-dev;
       fi
 
-      if [ "$TEST_HARNESS" == true ]; then
+      if [ "$TEST_HARNESS" == true ] || [ "$BUILD_SYSTEM" == "cmake" ]; then
         sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
         sudo apt-get update --option Acquire::Retries=100 --option Acquire::http::Timeout="60";
         sudo apt-get -y install cmake libgtest-dev xvfb wmctrl xdotool xfwm4 lcov gcc-7\
@@ -82,9 +82,15 @@ before_install:
 # build JDI and the CLI
 install:
   - |
-    if [ "$TEST_HARNESS" != true ]; then
+    if [ "$TEST_HARNESS" != true ] && [ "$BUILD_SYSTEM" != "cmake" ]; then
       make -j4
       CLI_ENABLE_EGM=FALSE make -j4 emake
+    else
+      mkdir build/
+      pushd build/
+      cmake -G "Unix Makefiles" ..
+      make
+      popd
     fi
 
 # by default most of our jobs will be run on a linux instance
@@ -97,7 +103,7 @@ env:
   global:
     - OUTPUT=/tmp/test
     # this is the default config each job in the matrix overrides a subset of
-    - COMPILER=gcc PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
+    - COMPILER=gcc BUILD_SYSTEM=make PLATFORM=xlib MODE=Debug GRAPHICS=OpenGL1 AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
   matrix:
       # The big ol' None test.
     - COMPILER=gcc PLATFORM=None MODE=Debug GRAPHICS=None AUDIO=None COLLISION=None NETWORK=None WIDGETS=None EXTENSIONS="None"
@@ -106,6 +112,8 @@ env:
     - COMPILER=MinGW64 PLATFORM=Win32 MODE=Run GRAPHICS=OpenGL1
     # Test Harness
     - TEST_HARNESS=true AUDIO=OpenAL
+    # CMake Build
+    - BUILD_SYSTEM=cmake
     # Game Modes
     - MODE=Run
     - MODE=Debug
