--- a/.travis.yml
+++ b/.travis.yml
@@ -86,6 +86,15 @@ install:
       make -j4
       CLI_ENABLE_EGM=FALSE make -j4 emake
     else
+      # build grpc
+      git clone -b $(curl -L https://grpc.io/release) https://github.com/grpc/grpc
+      pushd grpc
+      git submodule update --init
+      make
+      sudo make install
+      popd
+      
+      # build our crap
       mkdir build/
       pushd build/
       cmake -G "Unix Makefiles" ..
