--- a/appveyor.yml
+++ b/appveyor.yml
@@ -104,7 +104,7 @@ install:
           Write-Host ($result | Out-String) -foregroundcolor "Gray"
         }
       } Else {
-        If ($env:CMAKE_TEST -eq True) {
+        If ($env:CMAKE_TEST -eq $true) {
           mkdir build && cd build
           cmake -G "%GENERATOR%" -DCMAKE_BUILD_TYPE="%BUILD_TYPE%" -DPROTOBUF_IMPORT_DIRS="%VCPKG_DIR%\installed%TRIPLET_NAME%\include" -DVCPKG_TARGET_TRIPLET=%TRIPLET_NAME% -DCMAKE_TOOLCHAIN_FILE="%VCPKG_DIR%\scripts\buildsystems\vcpkg.cmake" ..
           cmake --build . --target install --config "%BUILD_TYPE%"
